<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true">

    <View
        android:id="@+id/view_title_padding_1"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#393A3C"/>

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@+id/view_title_padding_1"
        android:background="#393A3C">

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@mipmap/top_nav_quit"/>

        <ImageView
            android:id="@+id/img_help"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:layout_toLeftOf="@+id/img_logout"
            android:background="@mipmap/top_nav_help"/>

        <View
            android:id="@+id/line_about_help"
            android:layout_width="1px"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:layout_toLeftOf="@+id/img_help"
            android:alpha="0.6"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/txt_nickname"
            android:layout_toLeftOf="@+id/line_about_help"
            android:layout_marginRight="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:alpha="0.6"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txt_copyright"
        android:layout_below="@+id/rel_title"
        android:background="#FFFFFF"
        android:layout_toRightOf="@+id/view_title_padding_2"></RelativeLayout>

    <View
        android:id="@+id/view_title_padding_2"
        android:layout_width="190dp"
        android:layout_height="24dp"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:id="@+id/rel_left_icon"
        android:layout_width="190dp"
        android:layout_height="113dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_title_padding_1"
        android:background="@color/colorAccent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="43dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/icon"/>

            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_app_name"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name_en"
                android:textColor="#FFFFFF"
                android:textSize="7sp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_left_icon"
        android:background="#393A3C">

        <RelativeLayout
            android:id="@+id/rel_tab1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="#272929">

            <View
                android:id="@+id/line_tab1"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent"/>

            <ImageView
                android:id="@+id/img_tab1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:background="@mipmap/menu_icon_home_pressed"/>

            <TextView
                android:id="@+id/txt_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_tab1"
                android:padding="5dp"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_tab2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/rel_tab1"
            android:background="#00272929">

            <View
                android:id="@+id/line_tab2"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/img_tab2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:background="@mipmap/menu_icon_staff_management_default"/>

            <TextView
                android:id="@+id/txt_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_tab2"
                android:alpha="0.6"
                android:padding="5dp"
                android:text="@string/staff_management"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_tab3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/rel_tab2"
            android:background="#00272929">

            <View
                android:id="@+id/line_tab3"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/img_tab3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:background="@mipmap/menu_icon_device_management_default"/>

            <TextView
                android:id="@+id/txt_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_tab3"
                android:alpha="0.6"
                android:padding="5dp"
                android:text="@string/device_management"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_tab4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/rel_tab3"
            android:background="#00272929">

            <View
                android:id="@+id/line_tab4"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/img_tab4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:background="@mipmap/menu_icon_report_management_default"/>

            <TextView
                android:id="@+id/txt_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_tab4"
                android:alpha="0.6"
                android:padding="5dp"
                android:text="@string/report_management"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/rel_left_icon"
        android:alpha="0.6"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_copyright"
        android:textColor="#393A3C"
        android:background="#FFFFFF"
        android:textSize="13sp"/>
    <View
        android:id="@+id/view_cover"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.5"/>
</RelativeLayout>